# python-template

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
app/: __main__.py
tests/: test_main.py
