[project]
name = "python-template"
version = "1.1.0"
description = "A modern Python project template using uv and pypy"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
dependencies = [
    "httpx>=0.23.3",
    "more-itertools>=9.0.0",
    "python-dateutil>=2.8.2",
    "result>=0.9.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7.4",
    "debugpy>=1.6.6",
    "pytest>=7.2.1",
    "pytest-xdist>=3.2.0",
    "python-dotenv[cli]>=1.0.0",
    "pyperf>=2.5.0",
    "pytest-asyncio>=0.20.3",
    "ruff>=0.9.6",
    "basedpyright>=1.27.1",
    "watchdog>=6.0.0",
]

[tool.bandit]
skips = ["B101"]

[tool.basedpyright]
reportUnusedCallResult = false

[tool.pytest.ini_options]
addopts = ["-v", "--durations=0", "--durations-min=0.005"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 90
exclude = [".vscode"]
